Added Honey Crystallite tools and armor + recipes + Hive Crystal + charm

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.better_tools.ruby": "Ruby",
   "block.better_tools.light_polished_coal_trapdoor": "Light Metallic Coal Trapdoor",
   "item.better_tools.flint_hoe": "Flint Hoe",
+  "item.better_tools.curing_charm": "§6Curing Charm",
   "advancements.crystallite_tool_upgrade_adv.title": "Crystal Tool Smith",
   "item.better_tools.poison_charm": "§5Poison Charm",
   "block.better_tools.light_polished_coal_block": "Light Metallic Coal Block",
@@ -23,6 +24,7 @@
   "block.better_tools.light_polished_lapis_trapdoor": "Light Metallic Lapis Lazuli Trapdoor",
   "item.better_tools.crystallite_armor_redstone_helmet": "Crystallite Helmet",
   "item.better_tools.end_titanium_axe": "Ender Titanium Axe",
+  "item.better_tools.crystallite_axe_honey": "Crystallite Axe",
   "enchantment.better_tools.life_aura.desc": "Deal more damage the more HP you currently have, but deal less damage at low HP",
   "item.better_tools.nether_diamond_chestplate": "Nether Diamond Chestplate",
   "block.better_tools.sugar_block": "Sugar Block",
@@ -136,6 +138,7 @@
   "subtitles.crystallite_shimmer": "Mysterious sparkle",
   "block.better_tools.dark_polished_iron_stairs": "Dark Polished Iron Stairs",
   "item.better_tools.end_titanium_hoe": "Ender Titanium Hoe",
+  "item.better_tools.hive_crystal": "§6Hive Crystal",
   "block.better_tools.polished_topaz_block": "Metallic Topaz Block",
   "item.better_tools.sky_crystal": "§fSky Crystal",
   "item.minecraft.lingering_potion.effect.potion_of_decay_long": "Lingering Potion of Decay",
@@ -197,6 +200,7 @@
   "block.better_tools.random_ore": "Mixed Ore",
   "death.attack.freeze_shatter": "%1$s was shattered to pieces",
   "item.better_tools.crystallite_armor_gold_boots": "Crystallite Boots",
+  "item.better_tools.crystallite_sword_honey": "Crystallite Sword",
   "item.better_tools.crystallite_armor_prismarine_chestplate": "Crystallite Chestplate",
   "item.better_tools.crystallite_armor_lapis_boots": "Crystallite Boots",
   "block.better_tools.polished_diamond_trapdoor": "Metallic Diamond Trapdoor",
@@ -217,6 +221,7 @@
   "gui.better_tools.attributes_viewer.label_006": "00",
   "gui.better_tools.attributes_viewer.label_005": "00",
   "gui.better_tools.attributes_viewer.label_004": "00",
+  "item.better_tools.crystallite_armor_honey_boots": "Crystallite Boots",
   "gui.better_tools.attributes_viewer.label_003": "00",
   "gui.better_tools.attributes_viewer.label_002": "00",
   "gui.better_tools.attributes_viewer.label_001": "00",
@@ -228,6 +233,7 @@
   "item.better_tools.crystallite_armor_netherite_chestplate": "Crystallite Chestplate",
   "item.better_tools.crystallite_armor_prismarine_boots": "Crystallite Boots",
   "item.better_tools.crystallite_armor_iron_leggings": "Crystallite Leggings",
+  "item.better_tools.crystallite_hoe_honey": "Crystallite Hoe",
   "item.better_tools.sapphire_pickaxe": "Sapphire Pickaxe",
   "item.better_tools.iron_phantom_boots": "Phantom Boots",
   "advancements.all_crystallite_tools_adv.descr": "Craft a full set of Crystallite tools",
@@ -242,9 +248,11 @@
   "advancements.guardian_staff_adv.descr": "Hit a mob with the water pulse from a Guardian Staff",
   "item.better_tools.sapphire_sword": "Sapphire Sword",
   "item.better_tools.crystallite_shovel_diamond": "Crystallite Shovel",
+  "item.better_tools.crystallite_shovel_honey": "Crystallite Shovel",
   "item.better_tools.nether_diamond_dagger": "Nether Diamond Dagger",
   "item.better_tools.tough_crystal": "§7Tough Crystal",
   "item.better_tools.echo_crystal": "§3Echo Crystal",
+  "item.better_tools.crystallite_armor_honey_chestplate": "Crystallite Chestplate",
   "item.minecraft.splash_potion.effect.double_jump_potion_long": "Splash Potion of Double Jump",
   "death.attack.karma_damage": "%1$s got instant karma from %2$s",
   "item.better_tools.sapphire_shovel": "Sapphire Shovel",
@@ -258,6 +266,7 @@
   "item.better_tools.magma_chestplate": "Magma Chestplate",
   "item.better_tools.heart_charm": "§cHeart Charm",
   "item.better_tools.netherite_dagger": "Netherite Dagger",
+  "item.better_tools.crystallite_armor_honey_helmet": "Crystallite Helmet",
   "item.copper_tools_and_armor.nether_diamond_pickaxe": "Nether Diamond Pickaxe",
   "advancements.end_titanium_armor_adv.title": "One with the End",
   "item.better_tools.crystallite_shovel_ruby": "Crystallite Shovel",
@@ -375,6 +384,7 @@
   "block.better_tools.polished_redstone_stairs": "Metallic Redstone Stairs",
   "item.better_tools.music_disc_blank": "Blank Record",
   "advancements.flint_tools_adv.title": "True Caveman",
+  "item.better_tools.crystallite_pickaxe_honey": "Crystallite Pickaxe",
   "item.better_tools.crystallite_sword_topaz": "Crystallite Sword",
   "advancements.fire_staff_pokemon_adv.title": "It\u0027s not very effective...",
   "entity.better_tools.projectile_electric_staff_projectile": "Lightning Staff",
@@ -551,6 +561,7 @@
   "item.better_tools.ruby_sword": "Ruby Sword",
   "enchantment.better_tools.desperation.desc": "Deal a lot more damage the less HP you currently have, but has no effect at high HP",
   "item.better_tools.topaz_sword": "Topaz Sword",
+  "item.better_tools.crystallite_armor_honey_leggings": "Crystallite Leggings",
   "enchantment.better_tools.experience_ench": "Experienced",
   "block.better_tools.dark_polished_iron_wall": "Dark Polished Iron Wall",
   "item.better_tools.sapphire_hoe": "Sapphire Hoe",
@@ -571,6 +582,7 @@
   "item.minecraft.lingering_potion.effect.karma_potion_2": "Lingering Potion of Karma",
   "item.better_tools.topaz_boots": "Topaz Boots",
   "block.better_tools.light_polished_amethyst_wall": "Light Metallic Amethyst Wall",
+  "item.better_tools.crystallite_dagger_honey": "Crystallite Dagger",
   "item.copper_tools_and_armor.golden_potato": "Golden Potato",
   "item.better_tools.crystallite_armor_sky_chestplate": "Crystallite Chestplate",
   "item.better_tools.crystallite_hoe_sky": "Crystallite Hoe",
