Added keybind for sticking to the ceiling using Crystallite helmet honey. Also fixed capitalization of "and" in Creative tab text

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -613,6 +613,7 @@
   "block.better_tools.blue_slime_block": "Blue Slime Block",
   "item.better_tools.iron_dagger": "Iron Dagger",
   "entity.better_tools.purple_mooshroom": "Purple Mooshroom",
+  "key.better_tools.stick_to_ceiling_key": "Stick to Ceiling using Crystallite Helmet (Honey upgrade)",
   "block.better_tools.dark_polished_emerald_slab": "Dark Metallic Emerald Slab",
   "advancements.all_crystallite_tools_adv.title": "Complete Crystallite Catalogue",
   "item.better_tools.flint_dagger": "Flint Dagger",
@@ -740,7 +741,7 @@
   "death.attack.shockwave_damage.item": "%1$s was killed by a shockwave from %2$s using %3$s",
   "block.better_tools.polished_topaz_stairs": "Metallic Topaz Stairs",
   "item.better_tools.crystallite_dagger_sculk": "Crystallite Dagger",
-  "item_group.better_tools.better_tools_and_armor_misc": "Better Tools And Armor - Misc.",
+  "item_group.better_tools.better_tools_and_armor_misc": "Better Tools and Armor - Misc.",
   "item.better_tools.crystallite_armor_gold_chestplate": "Crystallite Chestplate",
   "item.better_tools.topaz_dagger": "Topaz Dagger",
   "item.better_tools.crystallite_shovel_gold": "Crystallite Shovel",
