--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -613,7 +613,7 @@
   "block.better_tools.blue_slime_block": "Blue Slime Block",
   "item.better_tools.iron_dagger": "Iron Dagger",
   "entity.better_tools.purple_mooshroom": "Purple Mooshroom",
-  "key.better_tools.stick_to_ceiling_key": "Stick to Ceiling using Crystallite Helmet (Honey upgrade)",
+  "key.better_tools.stick_to_ceiling_key": "BT+A - Stick to Ceiling",
   "block.better_tools.dark_polished_emerald_slab": "Dark Metallic Emerald Slab",
   "advancements.all_crystallite_tools_adv.title": "Complete Crystallite Catalogue",
   "item.better_tools.flint_dagger": "Flint Dagger",
