Minor text changes

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -443,7 +443,7 @@
   "block.better_tools.light_polished_coal_slab": "Light Metallic Coal Slab",
   "item.copper_tools_and_armor.nether_diamond": "Nether Diamond",
   "item.better_tools.gilded_bracelet": "§6Gilded Bracelet",
-  "advancements.nether_diamond_armor_adv.descr": "Wear a full set of Nether Diamonds armor",
+  "advancements.nether_diamond_armor_adv.descr": "Wear a full set of Nether Diamond armor",
   "item.better_tools.crystallite_armor_redstone_boots": "Crystallite Boots",
   "item.better_tools.crystallite_armor_ruby_leggings": "Crystallite Leggings",
   "item.better_tools.crystallite_hoe_netherite": "Crystallite Hoe",
