Added potions of ascension and descension

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -71,6 +71,7 @@
   "item.better_tools.crystallite_armor_emerald_boots": "Crystallite Boots",
   "item.better_tools.nether_diamond_hoe": "Nether Diamond Hoe",
   "block.better_tools.light_polished_gold_block": "Light Polished Gold Block",
+  "item.better_tools.ascension_potion": "Potion of Ascension",
   "item.better_tools.crystallite_sword_sapphire": "Crystallite Sword",
   "block.better_tools.dark_polished_copper_trapdoor": "Dark Polished Copper Trapdoor",
   "entity.minecraft.villager.better_tools.jeweller": "Jeweller",
@@ -458,6 +459,7 @@
   "item.better_tools.crystallite_shards": "Crystallite Shards",
   "item.minecraft.potion.effect.swift_swim_potion_2": "Potion of Rapidity",
   "item.better_tools.crystallite_axe_amethyst": "Crystallite Axe",
+  "item.better_tools.descension_potion": "Potion of Descension",
   "advancements.cactus_crystal_adv.descr": "Wear a Cactus Shirt and Crystal Leggings at the same time",
   "death.attack.karma_damage.player": "%1$s got instant karma whilst trying to escape %2$s",
   "block.better_tools.polished_diamond_block": "Metallic Diamond Block",
