Added new version of Just Enough Recipes plugin. Fixed crit damage procedure not displaying. Changed tooltip of Tough Crystal

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -252,7 +252,7 @@
   "item.better_tools.crystallite_shovel_diamond": "Crystallite Shovel",
   "item.better_tools.crystallite_shovel_honey": "Crystallite Shovel",
   "item.better_tools.nether_diamond_dagger": "Nether Diamond Dagger",
-  "item.better_tools.tough_crystal": "§7Tough Crystal",
+  "item.better_tools.tough_crystal": "Tough Crystal",
   "item.better_tools.echo_crystal": "§3Echo Crystal",
   "item.better_tools.crystallite_armor_honey_chestplate": "Crystallite Chestplate",
   "item.minecraft.splash_potion.effect.double_jump_potion_long": "Splash Potion of Double Jump",
