Fixed critical hit multiplier damage procedure. Also changed tooltip of Gilded Crystal

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -798,7 +798,7 @@
   "item.better_tools.crystallite_armor_ruby_helmet": "Crystallite Helmet",
   "entity.better_tools.projectile_ice_staff_projectile_from_dispenser": "Dispenser using Ice Staff",
   "advancements.ruby_sugar_adv.title": "More Speed, More Haste",
-  "item.better_tools.gilded_crystal": "§6Gilded Crystal",
+  "item.better_tools.gilded_crystal": "Gilded Crystal",
   "block.better_tools.dark_polished_coal_trapdoor": "Dark Metallic Coal Trapdoor",
   "block.better_tools.ruby_block": "Ruby Block",
   "gui.better_tools.attributes_viewer.label_empty": "|",
