Changed tooltips of all elemental crystals. Added JEI Info for elemental crystals

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -13,7 +13,7 @@
   "item.minecraft.tipped_arrow.effect.double_jump_potion_2": "Arrow of Double Jump",
   "block.better_tools.light_polished_copper_stairs": "Polished Copper Stairs",
   "item.better_tools.crystallite_armor_amethyst_chestplate": "Crystallite Chestplate",
-  "item.better_tools.fire_crystal": "§4Flame Crystal",
+  "item.better_tools.fire_crystal": "Flame Crystal",
   "item.copper_tools_and_armor.master_builder": "Master Builder",
   "item.better_tools.crystallite_dagger_amethyst": "Crystallite Dagger",
   "item.better_tools.battle_axe": "Battle Axe",
@@ -50,7 +50,7 @@
   "advancements.ruby_tools_adv.title": "Ruby Ruler",
   "gui.better_tools.attributes_viewer.label_swim_speed": "Swim Speed",
   "advancements.sapphire_gem_adv.title": "Mining at Heights",
-  "item.better_tools.earth_crystal": "§dEarth Crystal",
+  "item.better_tools.earth_crystal": "Earth Crystal",
   "advancements.end_titanium_adv.descr": "Mine an Ender Titanium Ore",
   "effect.double_jump": "Double Jump",
   "gui.better_tools.attributes_viewer.label_attribute": "Attribute",
@@ -59,7 +59,7 @@
   "item.better_tools.crystallite_sword_lapis": "Crystallite Sword",
   "advancements.all_effect_armor_adv.descr": "Obtain one of every type of base level Effect Armor",
   "advancements.crystallite_cave_adv.title": "Ooh, sparkly!",
-  "item.better_tools.speedy_crystal": "§cSpeedy Crystal",
+  "item.better_tools.speedy_crystal": "Speedy Crystal",
   "item.better_tools.crystallite_dagger_nether_diamond": "Crystallite Dagger",
   "advancements.desperation_adv.descr": "Wear a Chestplate enchanted with Desperation while at or below 20% HP",
   "item.better_tools.crystallite_armor_netherite_leggings": "Crystallite Leggings",
@@ -88,7 +88,7 @@
   "block.better_tools.dark_polished_lapis_stairs": "Metallic Lapis Lazuli Stairs",
   "item.better_tools.ruby_axe": "Ruby Axe",
   "item.better_tools.electric_necklace": "§6Lightning Necklace",
-  "item.better_tools.guardian_crystal": "§3Guardian Crystal",
+  "item.better_tools.guardian_crystal": "Guardian Crystal",
   "block.better_tools.sapphire_block": "Sapphire Block",
   "gui.better_tools.attributes_viewer.label_max_health": "Max Health",
   "advancements.glass_armor_adv.title": "Glass Ghost",
@@ -140,9 +140,9 @@
   "subtitles.crystallite_shimmer": "Mysterious sparkle",
   "block.better_tools.dark_polished_iron_stairs": "Dark Polished Iron Stairs",
   "item.better_tools.end_titanium_hoe": "Ender Titanium Hoe",
-  "item.better_tools.hive_crystal": "§6Hive Crystal",
+  "item.better_tools.hive_crystal": "Hive Crystal",
   "block.better_tools.polished_topaz_block": "Metallic Topaz Block",
-  "item.better_tools.sky_crystal": "§fSky Crystal",
+  "item.better_tools.sky_crystal": "Sky Crystal",
   "item.minecraft.lingering_potion.effect.potion_of_decay_long": "Lingering Potion of Decay",
   "advancements.ice_staff_adv.title": "Cool Staff!",
   "item.better_tools.crystallite_sword_nether_diamond": "Crystallite Sword",
@@ -253,7 +253,7 @@
   "item.better_tools.crystallite_shovel_honey": "Crystallite Shovel",
   "item.better_tools.nether_diamond_dagger": "Nether Diamond Dagger",
   "item.better_tools.tough_crystal": "Tough Crystal",
-  "item.better_tools.echo_crystal": "§3Echo Crystal",
+  "item.better_tools.echo_crystal": "Echo Crystal",
   "item.better_tools.crystallite_armor_honey_chestplate": "Crystallite Chestplate",
   "item.minecraft.splash_potion.effect.double_jump_potion_long": "Splash Potion of Double Jump",
   "death.attack.karma_damage": "%1$s got instant karma from %2$s",
@@ -310,7 +310,7 @@
   "item.better_tools.crystallite_dagger": "Crystallite Dagger",
   "enchantment.better_tools.thunder_shot": "Thunder Shot",
   "item.better_tools.topaz_chestplate": "Topaz Chestplate",
-  "item.better_tools.heal_crystal": "§cHeal Crystal",
+  "item.better_tools.heal_crystal": "Heal Crystal",
   "advancements.guardian_staff_multikill_adv.descr": "Kill 10 mobs with one water pulse using a Guardian Staff",
   "entity.better_tools.projectile_fire_staff_projectile": "Fire Staff",
   "advancements.flint_axe_adv.descr": "Craft a Flint Axe",
@@ -339,7 +339,7 @@
   "entity.better_tools.projectile_fire_staff_dispenser_projectile": "Dispenser using Fire Staff",
   "item.better_tools.master_builder": "Music Disc",
   "advancements.hearty_adv.descr": "Wear a Hearty Shirt",
-  "item.better_tools.nature_crystal": "§aNature Crystal",
+  "item.better_tools.nature_crystal": "Nature Crystal",
   "advancements.all_crystallite_armor_adv.descr": "Wear a full set of Crystallite armor",
   "gui.better_tools.attributes_viewer.label_00006": "0.000",
   "block.better_tools.purple_mushroom": "Purple Mushroom",
@@ -360,7 +360,7 @@
   "block.better_tools.polished_gold_trapdoor": "Polished Gold Trapdoor",
   "advancements.flint_tools_adv.descr": "Obtain a full set of Flint tools",
   "item.minecraft.tipped_arrow.effect.criticality_potion_2": "Arrow of Criticality",
-  "item.better_tools.spiked_crystal": "§8Spiked Crystal",
+  "item.better_tools.spiked_crystal": "Spiked Crystal",
   "item.better_tools.diamond_crying_obsidian_helmet": "Crying Obsidian Helmet",
   "advancements.flaming_adv.descr": "Ignite a mob with a Fire Staff",
   "block.better_tools.polished_amethyst_wall": "Metallic Amethyst Wall",
@@ -373,7 +373,7 @@
   "item.better_tools.crystallite_sword_sculk": "Crystallite Sword",
   "item.better_tools.sapphire_axe": "Sapphire Axe",
   "block.better_tools.dark_polished_copper_block": "Dark Polished Copper Block",
-  "item.better_tools.diamond_hard_crystal": "§bDiamond Hard Crystal",
+  "item.better_tools.diamond_hard_crystal": "Diamond Hard Crystal",
   "item.minecraft.tipped_arrow.effect.luck_potion_2": "Arrow of Luck",
   "advancements.warden_staff_adv.title": "Supersonic Staff!",
   "subtitles.crystallite_place": "Crystallite placed",
@@ -514,7 +514,7 @@
   "advancements.frozen_adv.title": "Stop right there, criminal scum!",
   "block.better_tools.dark_polished_iron_slab": "Dark Polished Iron Slab",
   "item.better_tools.diamond_crystal_leggings": "Crystal Leggings",
-  "item.better_tools.electric_crystal": "§6Lightning Crystal",
+  "item.better_tools.electric_crystal": "Lightning Crystal",
   "item.better_tools.iron_glass_armor_boots": "Glass Boots",
   "item.minecraft.splash_potion.effect.swift_swim_potion": "Splash Potion of Rapidity",
   "block.better_tools.light_polished_lapis_block": "Light Metallic Lapis Lazuli Block",
@@ -677,6 +677,7 @@
   "block.better_tools.topaz_ore": "Topaz Ore",
   "block.better_tools.polished_gold_slab": "Polished Gold Slab",
   "block.better_tools.light_polished_iron_slab": "Polished Iron Slab",
+  "jei.better_tools.elemental_crystals_info": "§lElemental Crystals\n§rUse in a Smithing Table to upgrade Crystallite equipment with different elemental effects!\nThey can also be used to smith or craft Crystallite Charms.",
   "item.better_tools.nature_ring": "§aNature Ring",
   "item.minecraft.tipped_arrow.effect.karma_potion_2": "Arrow of Karma",
   "item.better_tools.berry_pie": "Sweet Berry Pie",
@@ -764,10 +765,10 @@
   "item.better_tools.block_dance": "Music Disc",
   "item.better_tools.sapphire_dagger": "Sapphire Dagger",
   "item.better_tools.crystallite_pickaxe_gold": "Crystallite Pickaxe",
-  "item.better_tools.magic_crystal": "§9Magic Crystal",
+  "item.better_tools.magic_crystal": "Magic Crystal",
   "item.better_tools.end_titanium_pickaxe": "Ender Titanium Pickaxe",
   "death.attack.water_pulse_damage": "%1$s was blasted with a water pulse by %2$s",
-  "item.better_tools.ice_crystal": "§bFrozen Crystal",
+  "item.better_tools.ice_crystal": "Frozen Crystal",
   "death.attack.freeze_shatter_damage.player": "%1$s was shattered to pieces whilst trying to escape %2$s",
   "block.better_tools.dark_polished_emerald_wall": "Dark Metallic Emerald Wall",
   "item.better_tools.crystallite_hoe_prismarine": "Crystallite Hoe",
