--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -63,7 +63,7 @@
   "item.better_tools.crystallite_dagger_nether_diamond": "Crystallite Dagger",
   "advancements.desperation_adv.descr": "Wear a Chestplate enchanted with Desperation while at or below 20% HP",
   "item.better_tools.crystallite_armor_netherite_leggings": "Crystallite Leggings",
-  "jei.better_tools.crystallite_charm_base_info": "- Used to craft or smith Crystallite Charms.\n- Can be found rarely in Dungeon and Mineshaft chests.\n- Use a Crystallite Gem to duplicate.\n- Can also be duplicated without using Crystallite, through trading with a Jeweller villager.",
+  "jei.better_tools.crystallite_charm_base_info": "Used to craft or smith Crystallite Charms.\nCan be found rarely in Dungeon and Mineshaft chests.\nUse a Crystallite Gem to duplicate.\nCan also be duplicated without using Crystallite, through trading with a Jeweller villager.",
   "item.minecraft.potion.effect.double_jump_potion_long": "Potion of Double Jump",
   "block.better_tools.purple_mushroom_block": "Purple Mushroom Block",
   "item.better_tools.end_titanium_helmet": "Ender Titanium Helmet",
@@ -174,7 +174,7 @@
   "item.better_tools.nether_diamond_sword": "Nether Diamond Sword",
   "item.better_tools.crystallite_charm_base": "Crystallite Charm Base",
   "item.better_tools.crystallite_armor_diamond_helmet": "Crystallite Helmet",
-  "jei.better_tools.obtaining_crystallite_info": "§lObtaining Crystallite§r\n\nFind Crystallite Clusters underground by listening out for their sparkle!\nThey spawn rarely between y\u003d-48 and y\u003d46.\nThey do not spawn above y\u003d0 in oceans.\nMine the Crystallite Blocks with a §lNetherite Pickaxe§r or better.\nEach block drops 1 Crystallite Shards item, which can be used to craft Gems for crafting tools \u0026 armor.",
+  "jei.better_tools.obtaining_crystallite_info": "§lObtaining Crystallite§r\n\nFind Crystallite Clusters underground by listening out for their sparkle!\nThey spawn rarely between y\u003d-48 and y\u003d46.\nThey do not spawn above y\u003d0 in oceans.\nMine Crystallite Blocks with a §lNetherite Pickaxe§r or better.\nEach block drops 1 Crystallite Shards item, which can be used to craft Gems for crafting tools \u0026 armor.\nCrystallite Shards are also used to craft Elemental Crystals.",
   "item.better_tools.crystallite_armor_amethyst_helmet": "Crystallite Helmet",
   "item.better_tools.end_titanium_leggings": "Ender Titanium Leggings",
   "effect.better_tools.frozen": "Frozen",
@@ -609,6 +609,7 @@
   "item.better_tools.diamond_glass_armor_helmet": "Glass Helmet",
   "item.minecraft.lingering_potion.effect.criticality_potion_long": "Lingering Potion of Criticality",
   "advancements.double_jump_adv.title": "Prepare for trouble, make it double!",
+  "jei.better_tools.iron_crystallite_info": "§lCrystallite Upgrades: Iron§r\n\nTheme: Knockback and Magnetism",
   "block.better_tools.polished_amethyst_slab": "Metallic Amethyst Slab",
   "item.better_tools.iron_glass_armor_chestplate": "Glass Chestplate",
   "item.minecraft.lingering_potion.effect.potion_of_decay_2": "Lingering Potion of Decay",
