Added JEI information for each crystallite upgrade set

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -32,6 +32,7 @@
   "item.better_tools.crystallite_armor_iron_chestplate": "Crystallite Chestplate",
   "item.better_tools.gold_dagger": "Golden Dagger",
   "item.minecraft.lingering_potion.effect.swift_swim_potion_2": "Lingering Potion of Rapidity",
+  "jei.better_tools.amethyst_crystallite_info": "§lCrystallite Upgrades: §dAmethyst§r\n\nTheme:\nEarth and Echolocation",
   "item.copper_tools_and_armor.copper_shovel": "Copper Shovel",
   "entity.better_tools.projectile_lightning_staff_dispenser_projectile": "Dispenser using Lightning Staff",
   "item.better_tools.crystallite_armor_sapphire_helmet": "Crystallite Helmet",
@@ -117,6 +118,7 @@
   "item.better_tools.crystallite_hoe_redstone": "Crystallite Hoe",
   "block.better_tools.dark_polished_coal_wall": "Dark Metallic Coal Wall",
   "advancements.cactus_crystal_adv.title": "Spiky Swimmer",
+  "jei.better_tools.emerald_crystallite_info": "§lCrystallite Upgrades: §aEmerald§r\n\nTheme:\nNature and Regeneration",
   "advancements.berry_pie_adv.title": "Sweet!",
   "advancements.exp_potion_adv.title": "Experienced Brewing",
   "block.better_tools.polished_nether_diamond_wall": "Metallic Nether Diamond Wall",
@@ -236,6 +238,7 @@
   "effect.karma_potion": "Karma",
   "item.better_tools.crystallite_armor_netherite_chestplate": "Crystallite Chestplate",
   "item.better_tools.crystallite_armor_prismarine_boots": "Crystallite Boots",
+  "jei.better_tools.topaz_crystallite_info": "§lCrystallite Upgrades: §6Topaz§r\n\nTheme:\nLightning and Loot",
   "item.better_tools.crystallite_armor_iron_leggings": "Crystallite Leggings",
   "item.better_tools.crystallite_hoe_honey": "Crystallite Hoe",
   "item.better_tools.sapphire_pickaxe": "Sapphire Pickaxe",
@@ -287,6 +290,7 @@
   "item.better_tools.crystallite_armor_lapis_leggings": "Crystallite Leggings",
   "advancements.crystallite_armor_upgrade_adv.title": "Crystal Armorer",
   "item.better_tools.crystallite_shovel_redstone": "Crystallite Shovel",
+  "jei.better_tools.sculk_crystallite_info": "§lCrystallite Upgrades: §3Sculk§r\n\nTheme:\nDeep Dark and Mining\nAll stats increase slightly too!",
   "advancements.nether_diamond_adv.title": "Diamonds! (Fire Edition)",
   "block.better_tools.light_polished_lapis_wall": "Light Metallic Lapis Lazuli Wall",
   "item.better_tools.crystallite_armor_sky_leggings": "Crystallite Leggings",
@@ -470,6 +474,7 @@
   "item.copper_tools_and_armor.shrunk_music": "Toys on a Tear",
   "item.better_tools.crystallite_axe_sapphire": "Crystallite Axe",
   "item.better_tools.glass_chestplate": "Glass Chestplate",
+  "jei.better_tools.netherite_crystallite_info": "§lCrystallite Upgrades: §8Netherite§r\n\nTheme:\nDamage and The Nether\nAll stats increase slightly too!",
   "advancements.sugar_clump_adv.descr": "Eat a sugar clump",
   "item.better_tools.crystallite_sword_ruby": "Crystallite Sword",
   "advancements.ruby_sugar_adv.descr": "Wear Ruby Leggings and Sugar Boots at the same time",
@@ -502,6 +507,7 @@
   "item.minecraft.tipped_arrow.effect.karma_potion": "Arrow of Karma",
   "item.copper_tools_and_armor.battle_axe": "Battle Axe",
   "item.better_tools.glass_helmet": "Glass Helmet",
+  "jei.better_tools.diamond_crystallite_info": "§lCrystallite Upgrades: §bDiamond§r\n\nTheme:\nProtection and Durability\nAll other stats increase slightly too!",
   "item.better_tools.crystallite_pickaxe_iron": "Crystallite Pickaxe",
   "block.better_tools.light_polished_nether_diamond_stairs": "Light Metallic Nether Diamond Stairs",
   "advancements.electric_staff_pokemon_adv.descr": "Shock a water mob with an Electric Staff",
@@ -524,6 +530,8 @@
   "advancements.effect_armor_section.descr": "Advancements to do with Effect Armor",
   "item.better_tools.purple_mooshroom_spawn_egg": "Purple Mooshroom Spawn Egg",
   "gui.better_tools.attributes_viewer.label_atk_speed": "Knockbk. Res.",
+  "jei.better_tools.redstone_crystallite_info": "§lCrystallite Upgrades: §cRedstone§r\n\nTheme:\nHP and Utility",
+  "jei.better_tools.sky_crystallite_info": "§lCrystallite Upgrades: §fSky§r\n\nTheme:\nAir",
   "item.better_tools.crystallite_armor_sculk_helmet": "Crystallite Helmet",
   "item.better_tools.magic_ring": "§9Magic Ring",
   "item.better_tools.bouncy_bracelet": "§bBouncy Bracelet",
@@ -545,6 +553,7 @@
   "item.copper_tools_and_armor.block_dance": "Block Dance",
   "item.better_tools.reflect_charm": "§fReflect Charm",
   "item.better_tools.crystallite_armor_redstone_leggings": "Crystallite Leggings",
+  "jei.better_tools.gold_crystallite_info": "§lCrystallite Upgrades: §6Gold§r\n\nTheme:\nReach Distance",
   "gui.better_tools.attributes_viewer.label_attack_damage": "Attack Dmg.",
   "gui.better_tools.attributes_viewer.label_multiplier": "Multiplier",
   "item.better_tools.flint_shovel": "Flint Shovel",
@@ -584,6 +593,7 @@
   "block.better_tools.light_polished_emerald_slab": "Metallic Emerald Slab",
   "item.better_tools.berry_smoothie": "Sweet Berry Smoothie",
   "block.better_tools.polished_redstone_slab": "Metallic Redstone Slab",
+  "jei.better_tools.lapis_crystallite_info": "§lCrystallite Upgrades: §9Lapis Lazuli§r\n\nTheme:\nMagic and Enchanting\nAll items in this set have very high enchantability!",
   "item.better_tools.diamond_hard_plate": "§bDiamond Hard Plate",
   "advancements.pirate_adv.descr": "Craft an Iron Dagger",
   "item.minecraft.lingering_potion.effect.karma_potion_2": "Lingering Potion of Karma",
@@ -609,7 +619,7 @@
   "item.better_tools.diamond_glass_armor_helmet": "Glass Helmet",
   "item.minecraft.lingering_potion.effect.criticality_potion_long": "Lingering Potion of Criticality",
   "advancements.double_jump_adv.title": "Prepare for trouble, make it double!",
-  "jei.better_tools.iron_crystallite_info": "§lCrystallite Upgrades: Iron§r\n\nTheme: Knockback and Magnetism",
+  "jei.better_tools.iron_crystallite_info": "§lCrystallite Upgrades: §fIron§r\n\nTheme:\nKnockback and Magnetism",
   "block.better_tools.polished_amethyst_slab": "Metallic Amethyst Slab",
   "item.better_tools.iron_glass_armor_chestplate": "Glass Chestplate",
   "item.minecraft.lingering_potion.effect.potion_of_decay_2": "Lingering Potion of Decay",
@@ -686,8 +696,10 @@
   "item.better_tools.berry_pie": "Sweet Berry Pie",
   "item.better_tools.icy_bracelet": "§bIcy Bracelet",
   "block.better_tools.dark_polished_copper_wall": "Dark Polished Copper Wall",
+  "jei.better_tools.prismarine_crystallite_info": "§lCrystallite Upgrades: §3Prismarine§r\n\nTheme:\nWater",
   "item.better_tools.crystallite_armor_netherite_helmet": "Crystallite Helmet",
   "item.better_tools.crystallite_armor_amethyst_boots": "Crystallite Boots",
+  "jei.better_tools.nether_diamond_crystallite_info": "§lCrystallite Upgrades: §4Nether Diamond§r\n\nTheme:\nFire",
   "item.better_tools.crystallite_dagger_ruby": "Crystallite Dagger",
   "block.better_tools.polished_topaz_trapdoor": "Metallic Topaz Trapdoor",
   "advancements.karma_adv.title": "That\u0027s Karma!",
@@ -723,8 +735,10 @@
   "item.minecraft.splash_potion.effect.potion_of_decay_2": "Splash Potion of Decay",
   "item.copper_tools_and_armor.copper_pickaxe": "Copper Pickaxe",
   "death.attack.freeze_shatter_damage": "%1$s was shattered to pieces by %2$s",
+  "jei.better_tools.honey_crystallite_info": "§lCrystallite Upgrades: §6Honey§r\n\nTheme:\nCombos and Bees",
   "block.better_tools.light_polished_nether_diamond_slab": "Light Metallic Nether Diamond Slab",
   "advancements.nether_diamond_armor_adv.title": "Cover me in Nether Diamonds",
+  "jei.better_tools.sapphire_crystallite_info": "§lCrystallite Upgrades: §bSapphire§r\n\nTheme:\nIce",
   "item.better_tools.guardian_spike": "Guardian Spike",
   "item.better_tools.nether_diamond_leggings": "Nether Diamond Leggings",
   "item.better_tools.end_titanium_dagger": "Ender Titanium Dagger",
@@ -761,6 +775,7 @@
   "block.better_tools.nether_diamond_block": "Nether Diamond Block",
   "item.minecraft.splash_potion.effect.swift_swim_potion_long": "Splash Potion of Rapidity",
   "item.better_tools.ruby_hoe": "Ruby Hoe",
+  "jei.better_tools.ruby_crystallite_info": "§lCrystallite Upgrades: §cRuby§r\n\nTheme:\nSpeed",
   "advancements.overkill_adv.title": "Overkill",
   "block.better_tools.dark_polished_copper_slab": "Dark Polished Copper Slab",
   "item.better_tools.crystallite_armor_nether_diamond_leggings": "Crystallite Leggings",
