--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -1,33 +1,33 @@
 {
   "item.better_tools.ruby": "Ruby",
   "block.better_tools.crystallite_block": "Crystallite Block",
-  "block.better_tools.light_polished_coal_trapdoor": "Light Metallic Coal Trapdoor",
-  "item.better_tools.flint_hoe": "Flint Hoe",
   "item.better_tools.curing_charm": "§6Curing Charm",
+  "item.better_tools.flint_hoe": "Flint Hoe",
+  "block.better_tools.light_polished_coal_trapdoor": "Light Metallic Coal Trapdoor",
   "advancements.crystallite_tool_upgrade_adv.title": "Crystal Tool Smith",
-  "item.better_tools.poison_charm": "§5Poison Charm",
   "block.better_tools.light_polished_coal_block": "Light Metallic Coal Block",
+  "item.better_tools.poison_charm": "§5Poison Charm",
   "item_group.better_tools.crystallite_tab": "BT+A - Crystallite",
   "block.better_tools.polished_ruby_trapdoor": "Metallic Ruby Trapdoor",
   "item.minecraft.splash_potion.effect.double_jump_potion": "Splash Potion of Double Jump",
   "item.minecraft.tipped_arrow.effect.double_jump_potion_2": "Arrow of Double Jump",
-  "item.better_tools.crystallite_armor_amethyst_chestplate": "Crystallite Chestplate",
   "block.better_tools.light_polished_copper_stairs": "Polished Copper Stairs",
+  "item.better_tools.crystallite_armor_amethyst_chestplate": "Crystallite Chestplate",
   "item.better_tools.fire_crystal": "Flame Crystal",
   "item.copper_tools_and_armor.master_builder": "Master Builder",
   "item.better_tools.crystallite_dagger_amethyst": "Crystallite Dagger",
   "item.better_tools.battle_axe": "Battle Axe",
   "block.better_tools.jewellery_table": "Jewellery Table",
   "item.minecraft.lingering_potion.effect.potion_of_decay": "Lingering Potion of Decay",
-  "item.better_tools.crystallite_shovel": "Crystallite Shovel",
   "item.better_tools.crystallite_dagger_gold": "Crystallite Dagger",
+  "item.better_tools.crystallite_shovel": "Crystallite Shovel",
   "block.better_tools.light_polished_lapis_trapdoor": "Light Metallic Lapis Lazuli Trapdoor",
   "item.better_tools.crystallite_armor_redstone_helmet": "Crystallite Helmet",
   "item.better_tools.end_titanium_axe": "Ender Titanium Axe",
   "item.better_tools.crystallite_axe_honey": "Crystallite Axe",
-  "enchantment.better_tools.life_aura.desc": "Deal more damage the more HP you currently have, but deal less damage at low HP",
-  "item.better_tools.nether_diamond_chestplate": "Nether Diamond Chestplate",
   "block.better_tools.sugar_block": "Sugar Block",
+  "item.better_tools.nether_diamond_chestplate": "Nether Diamond Chestplate",
+  "enchantment.better_tools.life_aura.desc": "Deal more damage the more HP you currently have, but deal less damage at low HP",
   "advancements.flaming_adv.title": "Hot Staff!",
   "item.better_tools.crystallite_armor_iron_chestplate": "Crystallite Chestplate",
   "item.better_tools.gold_dagger": "Golden Dagger",
@@ -37,8 +37,8 @@
   "entity.better_tools.projectile_lightning_staff_dispenser_projectile": "Dispenser using Lightning Staff",
   "item.better_tools.crystallite_armor_sapphire_helmet": "Crystallite Helmet",
   "item.better_tools.crystallite_armor_iron_boots": "Crystallite Boots",
-  "item.better_tools.crystallite_sword": "Crystallite Sword",
   "item.better_tools.fire_staff": "Fire Staff",
+  "item.better_tools.crystallite_sword": "Crystallite Sword",
   "item.better_tools.crystallite_axe_topaz": "Crystallite Axe",
   "item.better_tools.guardian_necklace": "§3Guardian Necklace",
   "item.better_tools.crystallite_pickaxe": "Crystallite Pickaxe",
@@ -64,7 +64,7 @@
   "item.better_tools.crystallite_dagger_nether_diamond": "Crystallite Dagger",
   "advancements.desperation_adv.descr": "Wear a Chestplate enchanted with Desperation while at or below 20% HP",
   "item.better_tools.crystallite_armor_netherite_leggings": "Crystallite Leggings",
-  "jei.better_tools.crystallite_charm_base_info": "Used to craft or smith Crystallite Charms.\nCan be found rarely in Dungeon and Mineshaft chests.\nUse a Crystallite Gem to duplicate.\nCan also be duplicated without using Crystallite, through trading with a Jeweller villager.",
+  "jei.better_tools.crystallite_charm_base_info": "Used to craft or smith Crystallite Charms.\nCan be found rarely in Dungeon and Mineshaft chests.\nUse Crystallite Shards to duplicate.\nCan also be duplicated without using Crystallite, through trading with a Jeweller villager.",
   "item.minecraft.potion.effect.double_jump_potion_long": "Potion of Double Jump",
   "block.better_tools.purple_mushroom_block": "Purple Mushroom Block",
   "item.better_tools.end_titanium_helmet": "Ender Titanium Helmet",
@@ -100,8 +100,8 @@
   "item.better_tools.golden_potato": "Golden Potato",
   "advancements.golden_potato_adv.title": "Gilded Gardening",
   "advancements.karma_adv.descr": "Be attacked while effected with Karma",
-  "block.better_tools.light_polished_gold_wall": "Light Polished Gold Wall",
   "item.better_tools.crystallite_armor_iron_helmet": "Crystallite Helmet",
+  "block.better_tools.light_polished_gold_wall": "Light Polished Gold Wall",
   "block.better_tools.light_polished_emerald_block": "Metallic Emerald Block",
   "advancements.life_aura_adv.title": "Full Potential",
   "subtitles.rick_roll": "",
@@ -164,11 +164,11 @@
   "advancements.ice_staff_adv.descr": "Freeze a mob with an Ice Staff",
   "enchantment.better_tools.karma_curse.desc": "Get payback for your attacks",
   "item.better_tools.crystallite_axe_lapis": "Crystallite Axe",
-  "item.copper_tools_and_armor.copper_sword": "Copper Sword",
   "item.minecraft.tipped_arrow.effect.potion_of_decay_2": "Arrow of Decay",
+  "item.copper_tools_and_armor.copper_sword": "Copper Sword",
   "item.better_tools.crystallite_axe_sculk": "Crystallite Axe",
-  "biome.better_tools.fungal_caves": "Fungal Caves",
   "item.better_tools.crystallite_dagger_netherite": "Crystallite Dagger",
+  "biome.better_tools.fungal_caves": "Fungal Caves",
   "item.better_tools.crystallite_axe_gold": "Crystallite Axe",
   "item.better_tools.diamond_blackstone_leggings": "Gilded Blackstone Leggings",
   "item.better_tools.apple_juice": "Apple Juice",
@@ -216,8 +216,9 @@
   "block.better_tools.ruby_ore": "Ruby Ore",
   "gui.better_tools.attributes_viewer.label_knockback": "Knockback",
   "item.better_tools.crying_obsidian_helmet": "Crying Obsidian Helmet",
-  "item.better_tools.crystallite_sword_amethyst": "Crystallite Sword",
   "item.better_tools.rick_roll_disc": "Music Disc",
+  "item.better_tools.crystallite_sword_amethyst": "Crystallite Sword",
+  "jei.better_tools.improved_luck_info": "Four Leaf Clovers can be found in Treehouse chest loot, and they are used to brew Luck Potions.\nFour Leaf Clovers can be bone-mealed to grow more of them.\n\n\n§lImproved Luck Effect§r\n\nHaving an increased Luck value gives a chance for ores to drop double!\nThe chance is +5% per +1 Luck",
   "item.better_tools.crystallite_dagger_redstone": "Crystallite Dagger",
   "block.better_tools.sapphire_ore": "Sapphire Ore",
   "gui.better_tools.attributes_viewer.label_009": "00",
@@ -226,8 +227,8 @@
   "gui.better_tools.attributes_viewer.label_007": "00",
   "gui.better_tools.attributes_viewer.label_006": "00",
   "gui.better_tools.attributes_viewer.label_005": "00",
-  "gui.better_tools.attributes_viewer.label_004": "00",
   "item.better_tools.crystallite_armor_honey_boots": "Crystallite Boots",
+  "gui.better_tools.attributes_viewer.label_004": "00",
   "gui.better_tools.attributes_viewer.label_003": "00",
   "gui.better_tools.attributes_viewer.label_002": "00",
   "gui.better_tools.attributes_viewer.label_001": "00",
@@ -237,8 +238,8 @@
   "gui.better_tools.attributes_viewer.label_value": "Value",
   "effect.karma_potion": "Karma",
   "item.better_tools.crystallite_armor_netherite_chestplate": "Crystallite Chestplate",
-  "jei.better_tools.topaz_crystallite_info": "§lCrystallite Upgrades: §6Topaz§r\n\nTheme:\nLightning and Loot",
   "item.better_tools.crystallite_armor_prismarine_boots": "Crystallite Boots",
+  "jei.better_tools.topaz_crystallite_info": "§lCrystallite Upgrades: §6Topaz§r\n\nTheme:\nLightning and Loot",
   "item.better_tools.crystallite_armor_iron_leggings": "Crystallite Leggings",
   "item.better_tools.crystallite_hoe_honey": "Crystallite Hoe",
   "item.better_tools.sapphire_pickaxe": "Sapphire Pickaxe",
@@ -248,10 +249,10 @@
   "block.better_tools.light_polished_amethyst_block": "Light Metallic Amethyst Block",
   "item_group.better_tools.blocks_tab": "BT+A - Building Blocks",
   "item.copper_tools_and_armor.copper_axe": "Copper Axe",
-  "advancements.sugar_clump_adv.title": "Sugar Rush",
   "item.better_tools.topaz_shovel": "Topaz Shovel",
-  "entity.better_tools.projectile_ice_staff_projectile": "Ice Staff",
+  "advancements.sugar_clump_adv.title": "Sugar Rush",
   "advancements.end_titanium_tools_adv.descr": "Smith a full set of Ender Titanium tools",
+  "entity.better_tools.projectile_ice_staff_projectile": "Ice Staff",
   "advancements.guardian_staff_adv.descr": "Hit a mob with the water pulse from a Guardian Staff",
   "item.better_tools.sapphire_sword": "Sapphire Sword",
   "item.better_tools.crystallite_shovel_diamond": "Crystallite Shovel",
@@ -269,22 +270,22 @@
   "item.better_tools.iron_hearty_chestplate": "Hearty Shirt",
   "item.better_tools.crystallite_dagger_emerald": "Crystallite Dagger",
   "item.better_tools.crystallite_armor_topaz_leggings": "Crystallite Leggings",
-  "enchantment.copper_tools_and_armor.smelting_touch": "Smelting Touch",
   "item.better_tools.magma_chestplate": "Magma Chestplate",
-  "item.better_tools.heart_charm": "§cHeart Charm",
-  "item.better_tools.netherite_dagger": "Netherite Dagger",
+  "enchantment.copper_tools_and_armor.smelting_touch": "Smelting Touch",
   "item.better_tools.crystallite_armor_honey_helmet": "Crystallite Helmet",
+  "item.better_tools.netherite_dagger": "Netherite Dagger",
+  "item.better_tools.heart_charm": "§cHeart Charm",
   "item.copper_tools_and_armor.nether_diamond_pickaxe": "Nether Diamond Pickaxe",
   "advancements.end_titanium_armor_adv.title": "One with the End",
   "item.better_tools.crystallite_shovel_ruby": "Crystallite Shovel",
   "item.better_tools.crystallite_sword_prismarine": "Crystallite Sword",
-  "item.minecraft.tipped_arrow.effect.criticality_potion": "Arrow of Criticality",
   "item.minecraft.tipped_arrow.effect.swift_swim_potion_2": "Arrow of Rapidity",
+  "item.minecraft.tipped_arrow.effect.criticality_potion": "Arrow of Criticality",
   "advancements.crystallite_gem_adv.title": "Local Jeweller",
   "gui.better_tools.attributes_viewer.label_movement_speed": "Movement Spd.",
-  "item.better_tools.withered_gauntlet": "§8Withered Gauntlet",
-  "block.better_tools.polished_diamond_slab": "Metallic Diamond Slab",
   "item.better_tools.ruby_leggings": "Ruby Leggings",
+  "block.better_tools.polished_diamond_slab": "Metallic Diamond Slab",
+  "item.better_tools.withered_gauntlet": "§8Withered Gauntlet",
   "item.better_tools.earth_circlet": "§dEarth Circlet",
   "advancements.crystallite_tool_upgrade_adv.descr": "Upgrade a Crystallite tool for a useful effect",
   "item.better_tools.crystallite_armor_lapis_leggings": "Crystallite Leggings",
@@ -307,8 +308,8 @@
   "subtitles.crystallite_break": "Crystallite broken",
   "advancements.freeze_shatter_adv.descr": "Shatter a frozen mob with an attack",
   "advancements.warden_staff_adv.descr": "Hit a mob with a sonic boom using a Warden Staff",
-  "block.better_tools.polished_ruby_wall": "Metallic Ruby Wall",
   "advancements.ruby_gem_adv.title": "I thought this was removed...?",
+  "block.better_tools.polished_ruby_wall": "Metallic Ruby Wall",
   "block.better_tools.deepslate_ruby_ore": "Deepslate Ruby Ore",
   "block.better_tools.blackstone_magma": "Blackstone Magma Block",
   "item.better_tools.crystallite_sword_diamond": "Crystallite Sword",
@@ -343,6 +344,7 @@
   "item.better_tools.crystallite_axe_prismarine": "Crystallite Axe",
   "item.better_tools.end_titanium_ingot": "Ender Titanium Ingot",
   "entity.better_tools.projectile_fire_staff_dispenser_projectile": "Dispenser using Fire Staff",
+  "jei.better_tools.beacon_payment_items_info": "Better Tools and Armor allows these items to be used as Beacon payment items.",
   "item.better_tools.master_builder": "Music Disc",
   "advancements.hearty_adv.descr": "Wear a Hearty Shirt",
   "item.better_tools.nature_crystal": "Nature Crystal",
@@ -423,6 +425,7 @@
   "enchantment.better_tools.freeze_shot.desc": "Shots have a chance to freeze the target",
   "block.better_tools.light_polished_gold_slab": "Light Polished Gold Slab",
   "effect.better_tools.frozen.description": "Frozen mobs cannot move or jump. Shatter them for 1.25x damage (stacks with critical hits). Frozen players can jump repeatedly to shorten the effect time.",
+  "jei.better_tools.effect_armor_jei_information": "§lEffect Armor§r\n\nApplies an effect to the wearer, as long as they don\u0027t already have the effect.\nIf the durability cost would destroy the armor, the effect stops being applied until the armor is repaired or upgraded.",
   "item.better_tools.topaz": "Topaz",
   "item.copper_tools_and_armor.block_dance.desc": "Gareth Coker",
   "advancements.crystallite_armor_upgrade_adv.descr": "Upgrade a piece of Crystallite armor for a useful effect",
@@ -578,6 +581,7 @@
   "enchantment.better_tools.desperation.desc": "Deal a lot more damage the less HP you currently have, but has no effect at high HP",
   "item.better_tools.topaz_sword": "Topaz Sword",
   "item.better_tools.crystallite_armor_honey_leggings": "Crystallite Leggings",
+  "jei.better_tools.beacon_base_blocks_info": "Better Tools and Armor allows these blocks to be used as Beacon bases.",
   "enchantment.better_tools.experience_ench": "Experienced",
   "block.better_tools.dark_polished_iron_wall": "Dark Polished Iron Wall",
   "item.better_tools.sapphire_hoe": "Sapphire Hoe",
@@ -602,6 +606,7 @@
   "item.better_tools.crystallite_dagger_honey": "Crystallite Dagger",
   "item.copper_tools_and_armor.golden_potato": "Golden Potato",
   "item.better_tools.crystallite_armor_sky_chestplate": "Crystallite Chestplate",
+  "jei.better_tools.red_ice_info": "Red Ice allows you to run VERY fast on top of it, as long as you\u0027re not jumping.",
   "item.better_tools.crystallite_hoe_sky": "Crystallite Hoe",
   "item.better_tools.iron_gold_carrot_helmet": "Golden Carrot Hat",
   "item.minecraft.potion.effect.luck_potion_2": "Potion of Luck",
