Added items for Recall Potion and Potion of Lost Souls

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -249,6 +249,7 @@
   "block.better_tools.light_polished_amethyst_block": "Light Metallic Amethyst Block",
   "item_group.better_tools.blocks_tab": "BT+A - Building Blocks",
   "item.copper_tools_and_armor.copper_axe": "Copper Axe",
+  "item.better_tools.recall_potion": "Recall Potion",
   "item.better_tools.topaz_shovel": "Topaz Shovel",
   "advancements.sugar_clump_adv.title": "Sugar Rush",
   "advancements.end_titanium_tools_adv.descr": "Smith a full set of Ender Titanium tools",
@@ -775,6 +776,7 @@
   "item.better_tools.crystallite_shovel_gold": "Crystallite Shovel",
   "item.better_tools.crystallite_axe_nether_diamond": "Crystallite Axe",
   "item.better_tools.electric_staff": "Lightning Staff",
+  "item.better_tools.lost_souls_potion": "Potion of Lost Souls",
   "item.better_tools.blue_slimeball": "Blue Slimeball",
   "item.better_tools.crystallite_dagger_topaz": "Crystallite Dagger",
   "block.better_tools.nether_diamond_block": "Nether Diamond Block",
