Added even more advancements, to do with crystallite upgrades

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -50,6 +50,7 @@
   "advancements.topaz_gem_adv.descr": "Mine a Topaz Ore under a desert-like biome",
   "item.minecraft.splash_potion.effect.swift_swim_potion_2": "Splash Potion of Rapidity",
   "item_group.better_tools.tools_and_armor_tab": "BT+A - Tools and Armor Sets",
+  "advancements.ore_location_adv.descr": "Use echolocation to find some loot",
   "advancements.ruby_tools_adv.title": "Ruby Ruler",
   "gui.better_tools.attributes_viewer.label_swim_speed": "Swim Speed",
   "advancements.sapphire_gem_adv.title": "Mining at Heights",
@@ -146,8 +147,10 @@
   "item.better_tools.glide": "Music Disc",
   "subtitles.crystallite_shimmer": "Mysterious sparkle",
   "block.better_tools.dark_polished_iron_stairs": "Dark Polished Iron Stairs",
+  "advancements.high_max_hp_adv.descr": "Have at least 30 Max HP",
   "item.better_tools.end_titanium_hoe": "Ender Titanium Hoe",
   "item.better_tools.hive_crystal": "Hive Crystal",
+  "advancements.reflect_projectile_adv.descr": "Reflect a projectile at an enemy",
   "block.better_tools.polished_topaz_block": "Metallic Topaz Block",
   "item.better_tools.sky_crystal": "Sky Crystal",
   "item.minecraft.lingering_potion.effect.potion_of_decay_long": "Lingering Potion of Decay",
@@ -164,6 +167,7 @@
   "item.better_tools.guardian_staff": "Guardian Staff",
   "item.better_tools.crystallite_armor_redstone_chestplate": "Crystallite Chestplate",
   "enchantment.better_tools.freeze_shot": "Freeze Shot",
+  "advancements.natural_regen_adv.descr": "Wear a Nature Ring and Emerald-upgraded Crystallite Chestplate at the same time for maximum natural regeneration",
   "item.copper_tools_and_armor.nether_diamond_shovel": "Nether Diamond Shovel",
   "advancements.ice_staff_adv.descr": "Freeze a mob with an Ice Staff",
   "enchantment.better_tools.karma_curse.desc": "Get payback for your attacks",
@@ -193,6 +197,7 @@
   "item.better_tools.crystallite_gem": "Crystallite Gem",
   "advancements.freeze_shatter_adv.title": "Ice Breaker",
   "block.better_tools.light_polished_gold_trapdoor": "Light Polished Gold Trapdoor",
+  "advancements.aimbot_adv.title": "Literally Aimbot",
   "item.better_tools.crystallite_armor_ruby_chestplate": "Crystallite Chestplate",
   "item.better_tools.end_titanium_shovel": "Ender Titanium Shovel",
   "gui.better_tools.attributes_viewer.label_modifier": "Modifier",
@@ -248,6 +253,7 @@
   "advancements.crystallite_upgrades_section.descr": "Advancements for true completionists!",
   "jei.better_tools.topaz_crystallite_info": "§lCrystallite Upgrades: §6Topaz§r\n\nTheme:\nLightning and Loot",
   "item.better_tools.crystallite_armor_prismarine_boots": "Crystallite Boots",
+  "advancements.combo_jump_adv.title": "Wahoo!",
   "item.better_tools.crystallite_armor_iron_leggings": "Crystallite Leggings",
   "item.better_tools.crystallite_hoe_honey": "Crystallite Hoe",
   "item.better_tools.sapphire_pickaxe": "Sapphire Pickaxe",
@@ -258,6 +264,7 @@
   "item_group.better_tools.blocks_tab": "BT+A - Building Blocks",
   "item.copper_tools_and_armor.copper_axe": "Copper Axe",
   "item.better_tools.recall_potion": "Recall Potion",
+  "advancements.shockwave_adv.descr": "Kill a mob with a shockwave when landing from a fall",
   "advancements.sugar_clump_adv.title": "Sugar Rush",
   "item.better_tools.topaz_shovel": "Topaz Shovel",
   "entity.better_tools.projectile_ice_staff_projectile": "Ice Staff",
@@ -323,6 +330,7 @@
   "block.better_tools.blackstone_magma": "Blackstone Magma Block",
   "item.better_tools.crystallite_sword_diamond": "Crystallite Sword",
   "itemGroup.tabbetter_tools_and_armor_misc": "Better Tools And Armor - Misc.",
+  "advancements.aimbot_adv.descr": "Shoot a mob from at least 30 blocks away with perfect accuracy",
   "item.better_tools.crystallite_dagger": "Crystallite Dagger",
   "enchantment.better_tools.thunder_shot": "Thunder Shot",
   "item.better_tools.topaz_chestplate": "Topaz Chestplate",
@@ -371,6 +379,7 @@
   "item.better_tools.sugar_clump": "Sugar Clump",
   "gui.better_tools.attributes_viewer.label_armor": "Armor",
   "item.better_tools.sugar_boots": "Sugar Boots",
+  "advancements.combo_jump_adv.descr": "Jump as high as you can using boots with the Combo Jump ability",
   "item.better_tools.crystallite_armor_lapis_chestplate": "Crystallite Chestplate",
   "item.better_tools.nether_diamond_pickaxe": "Nether Diamond Pickaxe",
   "block.better_tools.dark_polished_iron_trapdoor": "Dark Polished Iron Trapdoor",
@@ -385,6 +394,7 @@
   "item.better_tools.crystallite_shovel_emerald": "Crystallite Shovel",
   "item.better_tools.end_titanium_sword": "Ender Titanium Sword",
   "item.better_tools.crystallite_shovel_lapis": "Crystallite Shovel",
+  "advancements.shockwave_adv.title": "Making an Impact",
   "item.better_tools.rick_roll_disc.desc": "Rick Astley - Never Gonna Give You Up",
   "item.better_tools.iron_cactus_chestplate": "Cactus Shirt",
   "advancements.far_block_reach_adv.title": "ARMS",
@@ -453,6 +463,7 @@
   "advancements.all_iron_effect_armor_adv.title": "Effect Emperor",
   "block.better_tools.polished_nether_diamond_trapdoor": "Metallic Nether Diamond Trapdoor",
   "item.better_tools.crystallite_shovel_sapphire": "Crystallite Shovel",
+  "advancements.natural_regen_adv.title": "Natural Medicine",
   "attribute.better_tools.thorns_damage": "Thorns Damage",
   "item.better_tools.end_titanium_boots": "Ender Titanium Boots",
   "advancements.experienced_adv.title": "Experienced Enchanting",
@@ -546,6 +557,8 @@
   "gui.better_tools.attributes_viewer.label_atk_speed": "Knockbk. Res.",
   "jei.better_tools.redstone_crystallite_info": "§lCrystallite Upgrades: §cRedstone§r\n\nTheme:\nHP and Utility",
   "jei.better_tools.sky_crystallite_info": "§lCrystallite Upgrades: §fSky§r\n\nTheme:\nAir",
+  "advancements.high_max_hp_adv.title": "Role: Tank",
+  "advancements.hiveblood_adv.title": "Hiveblood",
   "item.better_tools.crystallite_armor_sculk_helmet": "Crystallite Helmet",
   "item.better_tools.magic_ring": "§9Magic Ring",
   "item.better_tools.bouncy_bracelet": "§bBouncy Bracelet",
@@ -641,6 +654,7 @@
   "block.better_tools.polished_amethyst_slab": "Metallic Amethyst Slab",
   "item.better_tools.iron_glass_armor_chestplate": "Glass Chestplate",
   "item.minecraft.lingering_potion.effect.potion_of_decay_2": "Lingering Potion of Decay",
+  "advancements.reflect_projectile_adv.title": "Right back at \u0027ya!",
   "item.minecraft.lingering_potion.effect.swift_swim_potion_long": "Lingering Potion of Rapidity",
   "item.better_tools.crystallite_pickaxe_ruby": "Crystallite Pickaxe",
   "death.attack.freeze_shatter.player": "%1$s was shattered to pieces whilst fighting %2$s",
@@ -690,6 +704,7 @@
   "item.minecraft.tipped_arrow.effect.swift_swim_potion": "Arrow of Rapidity",
   "item.better_tools.crystallite_axe_iron": "Crystallite Axe",
   "item.better_tools.crystallite_pickaxe_diamond": "Crystallite Pickaxe",
+  "advancements.hiveblood_adv.descr": "Have at least 30 Absorption Health",
   "block.better_tools.light_polished_gold_stairs": "Light Polished Gold Stairs",
   "item.better_tools.topaz_pickaxe": "Topaz Pickaxe",
   "item.minecraft.splash_potion.effect.luck_potion_2": "Splash Potion of Luck",
@@ -744,6 +759,7 @@
   "item.better_tools.crystallite_leggings": "Crystallite Leggings",
   "item.better_tools.cactus_chestplate": "Cactus Shirt",
   "block.better_tools.light_polished_copper_wall": "Polished Copper Wall",
+  "advancements.vein_mining_adv.title": "Vein Miner",
   "advancements.ruby_tools_adv.descr": "Obtain a full set of Ruby tools",
   "advancements.high_crit_multiplier_adv.title": "Crit Mattered",
   "block.copper_tools_and_armor.copper_ore": "Copper Ore",
@@ -751,6 +767,7 @@
   "block.better_tools.light_polished_nether_diamond_block": "Light Metallic Nether Diamond Block",
   "item.minecraft.splash_potion.effect.potion_of_decay_long": "Splash Potion of Decay",
   "item.better_tools.flint_axe": "Flint Axe",
+  "advancements.low_gravity_adv.title": "Moon Walker",
   "item.better_tools.crystallite_sword_gold": "Crystallite Sword",
   "item.minecraft.splash_potion.effect.potion_of_decay_2": "Splash Potion of Decay",
   "item.copper_tools_and_armor.copper_pickaxe": "Copper Pickaxe",
@@ -841,8 +858,10 @@
   "advancements.ruby_sugar_adv.title": "More Speed, More Haste",
   "item.better_tools.gilded_crystal": "Gilded Crystal",
   "block.better_tools.dark_polished_coal_trapdoor": "Dark Metallic Coal Trapdoor",
+  "advancements.ore_location_adv.title": "X-ray Hacks?",
   "block.better_tools.ruby_block": "Ruby Block",
   "gui.better_tools.attributes_viewer.label_empty": "|",
+  "advancements.vein_mining_adv.descr": "Mine 16 ore blocks at once",
   "item.better_tools.end_titanium_chestplate": "Ender Titanium Chestplate",
   "item.better_tools.crystallite_axe_netherite": "Crystallite Axe",
   "item.minecraft.potion.effect.swift_swim_potion_long": "Potion of Rapidity",
@@ -852,6 +871,7 @@
   "advancements.get_guardian_spike_adv.title": "Spike Collector",
   "item.better_tools.crystallite_shovel_prismarine": "Crystallite Shovel",
   "enchantment.better_tools.karma_curse": "Curse of Karma",
+  "advancements.low_gravity_adv.descr": "Have low gravity and wear appropriate boots",
   "advancements.kill_warden_adv.descr": "Kill a Warden",
   "effect.better_tools.swift_swim": "Swift Swim",
   "item.minecraft.potion.effect.criticality_potion_2": "Potion of Criticality",
