--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -771,7 +771,7 @@
   "item.better_tools.crystallite_sword_gold": "Crystallite Sword",
   "item.minecraft.splash_potion.effect.potion_of_decay_2": "Splash Potion of Decay",
   "item.copper_tools_and_armor.copper_pickaxe": "Copper Pickaxe",
-  "advancements.kill_warden_adv.title": "Master of the Deep Dark",
+  "advancements.kill_warden_adv.title": "Master of the Deep",
   "death.attack.freeze_shatter_damage": "%1$s was shattered to pieces by %2$s",
   "jei.better_tools.honey_crystallite_info": "§lCrystallite Upgrades: §6Honey§r\n\nTheme:\nCombos and Bees",
   "block.better_tools.light_polished_nether_diamond_slab": "Light Metallic Nether Diamond Slab",
